add apollo client and graphql

--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "date-fns": "^2.15.0",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "gray-matter": "^4.0.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.1",
